<resources>
    <string name="app_name">Enersaving</string>

    <!-- Titulos ventanas -->
    <string name="title_activity_login">Iniciar sesión</string>
    <string name="title_activity_registro">Registro</string>
    <string name="title_activity_cambiar_pass">Cambiar contraseña</string>
    <string name="title_frag_config_serv_elect">Servicio de electricidad</string>
    <string name="title_frag_config_notif">Notificaciones</string>
    <string name="title_frag_config_serv_agua">Servicio de agua</string>
    <string name="title_frag_asoc_arduino">Asociar Sensor</string>
    <string name="title_frag_config">Configuracion</string>
    <string name="title_frag_cons_actual">Consumo Actual</string>
    <string name="title_frag_cons_acum">Consumo Acumulado</string>
    <string name="title_frag_prox_factura">Próxima Factura</string>
    <string name="title_frag_estadisticas">Estadísticas</string>
    <string name="title_frag_recomendaciones">Recomendaciones</string>
    <string name="title_frag_recomendLuz">Energía</string>
    <string name="title_frag_recomendAgua">Agua</string>
    <string name="title_activity_settings">Opciones adicionales</string>


    <!-- Items nav -->
    <string name="nav_asoc_arduino">Asociar Sensor</string>
    <string name="nav_configuración">Configuración</string>
    <string name="nav_consumo">Consumo</string>
    <string name="nav_cons_actual">Actual</string>
    <string name="nav_cons_acum">Acumulado</string>
    <string name="nav_prox_factura">Próxima factura</string>
    <string name="nav_estadisticas">Estadísticas</string>
    <string name="nav_recomendaciones">Recomendaciones</string>
    <string name="nav_cerrar_sesion">Cerrar Sesión</string>

    <!-- Msjs error -->
    <string name="error_selecc_servicio">Seleccione un servicio</string>
    <string name="error_selecc_periodo">Seleccione un período</string>
    <string name="error_selecc_tipo_est">Seleccione tipo de estadística</string>
    <string name="error_qr_arduino">Código no válido</string>
    <string name="error_no_arduino">No hay un sensor asociado</string>
    <string name="error_campo_requerido">Campo requerido</string>
    <string name="error_campo_formato">Formato incorrecto</string>
    <string name="error_pass_invalida">Mínimo 8 caracteres</string>
    <string name="error_pass_incorrecta">Contraseña incorrecta</string>
    <string name="error_resp_incorrecta">Respuesta incorrecta</string>
    <string name="error_no_coinciden">La contraseña no coincide</string>
    <string name="error_servidor_no_disp">Servidor no disponible</string>
    <string name="error_internet_no_disp">Conexion a internet no disponible</string>
    <string name="error_inesperado_serv">Error inesperado en el servidor</string>
    <string name="error_traducc_datos">Error al traducir datos</string>
    <string name="error_complete_config">Por favor complete los datos de configuracion</string>

    <!-- Msjs -->
    <string name="msj_espere">Espere</string>
    <string name="msj_cargando">Cargando</string>
    <string name="msj_advertencia"> Los datos pueden variar en la realidad, dado que no se posee informacion del año pasado</string>
    <string name="msj_ahorro_elect">El monto a pagar recibió una bonificación por ahorro de energía</string>
    <string name="msj_penalizac_elect">El monto a pagar recibió una penalización por consumo excesivo</string>


    <!-- Claves para las SharedPrefferences -->
    <string name="pref_sesion_inic">sesionIniciada</string>
    <string name="pref_nombre_usuario">nombreUsuario</string>
    <string name="pref_limite_elect">limiteElect</string>
    <string name="pref_limite_agua">limiteAgua</string>
    <string name="pref_medir_elect">medirElect</string>
    <string name="pref_medir_agua">medirAgua</string>
    <string name="pref_empresa_elect">empresaElect</string>
    <string name="pref_fecha_fact_elect">fechaFactElec</string>
    <string name="pref_empresa_agua">empresaAgua</string>
    <string name="pref_agua_k">k</string>
    <string name="pref_agua_zf">zf</string>
    <string name="pref_agua_tgdf">tgdf</string>
    <string name="pref_agua_sc">sc</string>
    <string name="pref_agua_ef">ef</string>
    <string name="pref_agua_st">st</string>
    <string name="pref_agua_aud">aud</string>
    <string name="pref_agua_fs">fs</string>
    <string name="pref_agua_cl">cl</string>
    <string name="pref_agua_fecha_fact">fechaFactAgua</string>
    <string name="pref_id_arduino">idArduino</string>
    <string name="pref_server_local">serverLocal</string>
    <string name="pref_ip_server">ipServer</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Opciones</string>

    <!-- Descripción de meses, días y horas -->
    <string-array name="string_array_meses">
        <item>Ene</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Abr</item>
        <item>May</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Ago</item>
        <item>Sep</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dic</item>
    </string-array>
    <string-array name="string_array_dias">
        <item>Dom</item>
        <item>Lun</item>
        <item>Mar</item>
        <item>Mie</item>
        <item>Jue</item>
        <item>Vie</item>
        <item>Sab</item>
    </string-array>
    <string-array name="string_array_horas">
        <item>00</item>
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
    </string-array>

    <!-- Recomendaciones de ahorro de energía -->
    <string-array name="string_array_rec_luz" formatted="false">
        <item>Usa focos de bajo consumo: ahorran hasta un 75% de energía.</item>
        <item>Recordá apagar la luz cuando salgas de una habitación o cuando la luz natural sea suficiente.</item>
        <item>Regular la calefacción en 20°: Es la temperatura indicada para lograr que los equipos de calefacción logren eficiencia y ahorro energético, ya que por cada grado que se aleja de los 20° el consumo aumenta un 7%.</item>
        <item>Usa la lavadora llena: ahorrarás agua y electricidad.</item>
        <item>Descongelá el freezer: la escarcha crea un aislamiento que puede acarrear un 20% de consumo eléctrico suplementario.</item>
        <item>Sustituye tu refrigerador viejo (de más de 10 años) de alto consumo eléctrico, por uno moderno de bajo consumo (consume 1/3 parte de electricidad). La diferencia de costo se paga con el ahorro de energía.</item>
        <item>Desconecta todos los aparatos eléctricos que no estés utilizando, al estar conectados consumen energía (aunque no estén encendidos).</item>
        <item>La mayor parte de la energía que usan los lavarropas (del 80% al 85%) se utiliza para calentar el agua. Por lo tanto, lave -siempre que se pueda- con los programas de agua fría. Intente que trabaje siempre a plena carga. Use sólo el jabón necesario pues su exceso produce mucha espuma y hace que el motor trabaje de más.</item>
    </string-array>

    <!-- Recomendaciones de ahorro de agua -->
    <string-array name="string_array_rec_agua" formatted="false">
        <item>Cerrá la canilla al lavarte los dientes o afeitarte, podés ahorrar hasta 10 litros.</item>
        <item>Arregla con urgencia las averías de canillas y cañerías. Una canilla que gotea pierde 30 litros diarios.</item>
        <item>Utilice todo el espacio en su lavarropa cuando lo encienda, así se requerirán menos ciclos por semana. También esté consciente de que la mayoría de las funciones que requieren media carga son ineficientes debido a que utilizan más de la mitad del agua requerida para una carga completa.</item>
        <item>Igualmente, si tiene un lavaplatos, sólo utilícelo cuando tenga suficientes vajillas que ocupen toda su capacidad. No enjuague los platos bajo la canilla antes, ya que los lavaplatos están diseñados para deshacerse de la grasa de los platos, tazas y cubiertos.</item>
        <item>Riegue el jardín durante la noche para minimizar la evaporación.</item>
        <item>Lave las frutas y las verduras en un recipiente con agua y no las limpie bajo la canilla.</item>
        <item>Prefiera lavar el automóvil usando baldes y una esponja en vez de una manguera. También puede comprar toallas especiales para lavar el carro que no necesitan agua.</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
